--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ highlighter:      rouge
 
 # Setup
 title:            Hydeout
-tagline:          'A Jekyll theme'
+tagline:          'A Jekyll theme blog'
 description:      'The <a href="http://hyde.getpoole.com" target="_blank">Hyde</a> theme for <a href="http://jekyllrb.com" target="_blank">Jekyll</a>, refreshed.'
 url:              https://fongandrew.github.io
 baseurl:          '/hydeout'
